Updated inventory, preparing pre-commit

--- a/roles/iptables-docker/handlers/main.yml
+++ b/roles/iptables-docker/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: reload iptables-docker
-  service:
+- name: Reload iptables-docker
+  ansible.builtin.service:
     name: iptables-docker
     state: restarted
-    enabled: yes
+    enabled: true
