--- a/roles/iptables-docker/tasks/main.yml
+++ b/roles/iptables-docker/tasks/main.yml
@@ -1,18 +1,23 @@
 ---
-- include_tasks: 
+- name: Populate service facts
+  ansible.builtin.service_facts:
+- name: Include iptables-legacy tasks
+  ansible.builtin.include_tasks:
     file: iptables-legacy.yml
     apply:
       tags: iptables-legacy,legacy
   tags: iptables-legacy,legacy
 
-- include_tasks: 
+- name: Include install tasks
+  ansible.builtin.include_tasks:
     file: install.yml
     apply:
       tags: iptables-install,install
   tags: iptables-install,install
   when: iptables_docker_uninstall is false
 
-- include_tasks: 
+- name: Include uninstall tasks
+  ansible.builtin.include_tasks:
     file: uninstall.yml
     apply:
       tags: uninstall-install,uninstall
