--- a/roles/iptables-docker/tasks/uninstall.yml
+++ b/roles/iptables-docker/tasks/uninstall.yml
@@ -1,34 +1,33 @@
 ---
-
 - name: Enable firewall services
-  service: 
-    name: "{{ item }}" 
-    state: started 
-    enabled: yes
+  ansible.builtin.service:
+    name: "{{ item }}"
+    state: started
+    enabled: true
   with_items: "{{ firewall_services }}"
-  ignore_errors: yes
+  when: item in services
 
-- name: disable iptables-docker
-  service:
+- name: Disable iptables-docker
+  ansible.builtin.service:
     name: iptables-docker
-    enabled: no
+    enabled: false
     state: stopped
 
-- name: remove iptables-docker.sh
-  file:
+- name: Remove iptables-docker.sh
+  ansible.builtin.file:
     path: /usr/local/sbin/iptables-docker.sh
     state: absent
 
-- name: remove awk.firewall
-  file:
+- name: Remove awk.firewall
+  ansible.builtin.file:
     path: /usr/local/sbin/awk.firewall
     state: absent
 
-- name: remove iptables-docker.service
-  file:
+- name: Remove iptables-docker.service
+  ansible.builtin.file:
     path: /etc/systemd/system/iptables-docker.service
     state: absent
 
-- name: reload systemd
-  systemd:
-    daemon_reload: yes
+- name: Reload systemd
+  ansible.builtin.systemd:
+    daemon_reload: true
