--- a/site.yml
+++ b/site.yml
@@ -1,6 +1,7 @@
 ---
 - hosts: all
-  remote_user: "ubuntu" # <- change this with your user
-  become: yes
-  roles: 
-     - role: roles/iptables-docker
+  name: Manage iptables-docker
+  remote_user: reltub # <- change this with your user
+  become: true
+  roles:
+    - role: roles/iptables-docker
