--- a/inventory/host_vars/uno.yml
+++ b/inventory/host_vars/uno.yml
@@ -8,4 +8,8 @@ iptables_allow_rules:
     proto: tcp
     port: 2049
     from: 192.168.66.0/24
+  - desc: Allow port 53 udp/tcp metaorg LAN for dnsmasq
+    proto: both
+    port: 53
+    from: 192.168.66.0/24
 ...
